WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212285
Array.prototype.splice doesn't set "length" of returned object
https://bugs.webkit.org/show_bug.cgi?id=212285
Summary
Array.prototype.splice doesn't set "length" of returned object
Alexey Shvayka
Reported
2020-05-22 16:22:05 PDT
Array.prototype.splice doesn't set "length" of returned object
Attachments
Patch
(3.53 KB, patch)
2020-05-22 16:25 PDT
,
Alexey Shvayka
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Shvayka
Comment 1
2020-05-22 16:25:00 PDT
Created
attachment 400085
[details]
Patch
EWS
Comment 2
2020-05-22 16:50:30 PDT
Committed
r262088
: <
https://trac.webkit.org/changeset/262088
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 400085
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-05-22 16:51:17 PDT
<
rdar://problem/63558637
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug