Array.prototype.splice doesn't set "length" of returned object https://bugs.webkit.org/show_bug.cgi?id=212285

Reviewed by Darin Adler.

JSTests:

* test262/expectations.yaml: Mark 2 test cases as passing.

Source/JavaScriptCore:

This change implements step 12 of Array.prototype.splice [1], which is observable
if result object is not JSArray, aligning JSC with V8 and SpiderMonkey.

Only slow path of splice() is affected by this patch; zero-argument case already
performs setLength(). Microbenchmarks are neutral.

[1]: https://tc39.es/ecma262/#sec-array.prototype.splice

* runtime/ArrayPrototype.cpp:
(JSC::arrayProtoFuncSplice):


Canonical link: https://commits.webkit.org/225151@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262088 268f45cc-cd09-0410-ab3c-d52691b4dbfc